add_executable(TreeSearchSolver_example_sequential_ordering_main)
target_sources(TreeSearchSolver_example_sequential_ordering_main PRIVATE
    sequential_ordering_main.cpp)
target_include_directories(TreeSearchSolver_example_sequential_ordering_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(TreeSearchSolver_example_sequential_ordering_main PUBLIC
    TreeSearchSolver_treesearchsolver
    ORProblems::sequential_ordering
    Boost::program_options)
set_target_properties(TreeSearchSolver_example_sequential_ordering_main PROPERTIES OUTPUT_NAME "treesearchsolver_sequential_ordering")
install(TARGETS TreeSearchSolver_example_sequential_ordering_main)

add_executable(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main)
target_sources(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main PRIVATE
    permutation_flowshop_scheduling_makespan_main.cpp)
target_include_directories(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main PUBLIC
    TreeSearchSolver_treesearchsolver
    ORProblems::permutation_flowshop_scheduling_makespan
    Boost::program_options)
set_target_properties(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main PROPERTIES OUTPUT_NAME "treesearchsolver_permutation_flowshop_scheduling_makespan")
install(TARGETS TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main)

add_executable(TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main)
target_sources(TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main PRIVATE
    permutation_flowshop_scheduling_tct_main.cpp)
target_include_directories(TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main PUBLIC
    TreeSearchSolver_treesearchsolver
    ORProblems::permutation_flowshop_scheduling_tct
    Boost::program_options)
set_target_properties(TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main PROPERTIES OUTPUT_NAME "treesearchsolver_permutation_flowshop_scheduling_tct")
install(TARGETS TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main)

add_executable(TreeSearchSolver_example_simple_assembly_line_balancing_1_main)
target_sources(TreeSearchSolver_example_simple_assembly_line_balancing_1_main PRIVATE
    simple_assembly_line_balancing_1_main.cpp)
target_include_directories(TreeSearchSolver_example_simple_assembly_line_balancing_1_main INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(TreeSearchSolver_example_simple_assembly_line_balancing_1_main PUBLIC
    TreeSearchSolver_treesearchsolver
    ORProblems::simple_assembly_line_balancing_1
    Boost::program_options)
set_target_properties(TreeSearchSolver_example_simple_assembly_line_balancing_1_main PROPERTIES OUTPUT_NAME "treesearchsolver_simple_assembly_line_balancing_1")
install(TARGETS TreeSearchSolver_example_simple_assembly_line_balancing_1_main)
