add_library(TreeSearchSolver_read_args INTERFACE)
target_link_libraries(TreeSearchSolver_read_args INTERFACE
    TreeSearchSolver_treesearchsolver)
target_include_directories(TreeSearchSolver_read_args INTERFACE
    ${PROJECT_SOURCE_DIR}/include)


add_library(TreeSearchSolver_example_knapsack_with_conflicts INTERFACE)
target_link_libraries(TreeSearchSolver_example_knapsack_with_conflicts INTERFACE
    TreeSearchSolver_read_args
    ORProblems::knapsack_with_conflicts)
target_include_directories(TreeSearchSolver_example_knapsack_with_conflicts INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(TreeSearchSolver::examples::knapsack_with_conflicts ALIAS TreeSearchSolver_example_knapsack_with_conflicts)

add_executable(TreeSearchSolver_example_knapsack_with_conflicts_main)
target_sources(TreeSearchSolver_example_knapsack_with_conflicts_main PRIVATE
    knapsack_with_conflicts_main.cpp)
target_link_libraries(TreeSearchSolver_example_knapsack_with_conflicts_main PUBLIC
    TreeSearchSolver_example_knapsack_with_conflicts
    Boost::program_options)
set_target_properties(TreeSearchSolver_example_knapsack_with_conflicts_main PROPERTIES OUTPUT_NAME "treesearchsolver_knapsack_with_conflicts")
install(TARGETS TreeSearchSolver_example_knapsack_with_conflicts_main)


add_library(TreeSearchSolver_example_sequential_ordering INTERFACE)
target_link_libraries(TreeSearchSolver_example_sequential_ordering INTERFACE
    TreeSearchSolver_read_args
    ORProblems::sequential_ordering)
target_include_directories(TreeSearchSolver_example_sequential_ordering INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(TreeSearchSolver::examples::sequential_ordering ALIAS TreeSearchSolver_example_sequential_ordering)

add_executable(TreeSearchSolver_example_sequential_ordering_main)
target_sources(TreeSearchSolver_example_sequential_ordering_main PRIVATE
    sequential_ordering_main.cpp)
target_link_libraries(TreeSearchSolver_example_sequential_ordering_main PUBLIC
    TreeSearchSolver_example_sequential_ordering
    Boost::program_options)
set_target_properties(TreeSearchSolver_example_sequential_ordering_main PROPERTIES OUTPUT_NAME "treesearchsolver_sequential_ordering")
install(TARGETS TreeSearchSolver_example_sequential_ordering_main)


add_library(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan INTERFACE)
target_link_libraries(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan INTERFACE
    TreeSearchSolver_read_args
    ORProblems::permutation_flowshop_scheduling_makespan)
target_include_directories(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(TreeSearchSolver::examples::permutation_flowshop_scheduling_makespan ALIAS TreeSearchSolver_example_permutation_flowshop_scheduling_makespan)

add_executable(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main)
target_sources(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main PRIVATE
    permutation_flowshop_scheduling_makespan_main.cpp)
target_link_libraries(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main PUBLIC
    TreeSearchSolver_example_permutation_flowshop_scheduling_makespan
    Boost::program_options)
set_target_properties(TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main PROPERTIES OUTPUT_NAME "treesearchsolver_permutation_flowshop_scheduling_makespan")
install(TARGETS TreeSearchSolver_example_permutation_flowshop_scheduling_makespan_main)


add_library(TreeSearchSolver_example_permutation_flowshop_scheduling_tct INTERFACE)
target_link_libraries(TreeSearchSolver_example_permutation_flowshop_scheduling_tct INTERFACE
    TreeSearchSolver_read_args
    ORProblems::permutation_flowshop_scheduling_tct)
target_include_directories(TreeSearchSolver_example_permutation_flowshop_scheduling_tct INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(TreeSearchSolver::examples::permutation_flowshop_scheduling_tct ALIAS TreeSearchSolver_example_permutation_flowshop_scheduling_tct)

add_executable(TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main)
target_sources(TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main PRIVATE
    permutation_flowshop_scheduling_tct_main.cpp)
target_link_libraries(TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main PUBLIC
    TreeSearchSolver_example_permutation_flowshop_scheduling_tct
    Boost::program_options)
set_target_properties(TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main PROPERTIES OUTPUT_NAME "treesearchsolver_permutation_flowshop_scheduling_tct")
install(TARGETS TreeSearchSolver_example_permutation_flowshop_scheduling_tct_main)


add_library(TreeSearchSolver_example_simple_assembly_line_balancing_1 INTERFACE)
target_link_libraries(TreeSearchSolver_example_simple_assembly_line_balancing_1 INTERFACE
    TreeSearchSolver_read_args
    ORProblems::simple_assembly_line_balancing_1)
target_include_directories(TreeSearchSolver_example_simple_assembly_line_balancing_1 INTERFACE
    ${PROJECT_SOURCE_DIR}/include)
add_library(TreeSearchSolver::examples::simple_assembly_line_balancing_1 ALIAS TreeSearchSolver_example_simple_assembly_line_balancing_1)

add_executable(TreeSearchSolver_example_simple_assembly_line_balancing_1_main)
target_sources(TreeSearchSolver_example_simple_assembly_line_balancing_1_main PRIVATE
    simple_assembly_line_balancing_1_main.cpp)
target_link_libraries(TreeSearchSolver_example_simple_assembly_line_balancing_1_main PUBLIC
    TreeSearchSolver_example_simple_assembly_line_balancing_1
    Boost::program_options)
set_target_properties(TreeSearchSolver_example_simple_assembly_line_balancing_1_main PROPERTIES OUTPUT_NAME "treesearchsolver_simple_assembly_line_balancing_1")
install(TARGETS TreeSearchSolver_example_simple_assembly_line_balancing_1_main)
